// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/protobuf/timestamp.proto";
import "google/type/interval.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Proto representation of the internal ImpressionMetadata entity type.
message ImpressionMetadata {
  fixed64 external_data_provider_id = 1;

  string blob_uri = 2;
  string blob_type_url = 3;

  string event_group_reference_id = 4;

  fixed64 external_model_line_id = 5;

  google.type.Interval interval = 6;

  enum State {
    // Default, unspecified state.
    STATE_UNSPECIFIED = 0;
    // The metadata is active and can be used for fulfillment.
    ACTIVE = 1;
    // The metadata has been marked as deleted and will not be used for
    // fulfillment unless explicitly requested.
    DELETED = 2;
  }
  State state = 7;

  google.protobuf.Timestamp create_time = 8;
  google.protobuf.Timestamp update_time = 9;
}


